--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,7 @@ jobs:
         run: docker build . -t ${IMAGE,,} # lowercase IMAGE
 
       - name: Login to ghcr.io
-        run: docker login https://ghcr.io -u token --password-stdin <<< ${{ secrets.WRITE_PACKAGES_TOKEN }}
+        run: docker login https://ghcr.io -u token --password-stdin <<< ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publish image
         run: docker push ${IMAGE,,} # lowercase IMAGE
